迁移合成规划、执行及快速路径系统